test/mutation_analysis/s0198_house_robber/hafis/starchat/mutants/11/result.txt
./test/mutation_analysis/s0198_house_robber/hafis/starchat/mutants/11/Solution.java:32: error: unreachable statement
        for (int i = 2; false; i++) {
                                    ^
1 error
